Cucumber scenarios pass.

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :unit_of_measure_id %><br />
-    <%= f.number_field :unit_of_measure_id %>
+    <%= f.label :unit_of_measure %><br />
+    <%= f.text_field :unit_of_measure %>
   </div>
   <div class="field">
     <%= f.label :price_per_unit %><br />
