--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
     <td><%= product.code %></td>
     <td><%= product.name %></td>
     <td><%= product.description %></td>
-    <td><%= product.unit_of_measure_id %></td>
+    <td><%= product.unit_of_measure %></td>
     <td><%= product.price_per_unit %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
