Product quantity updating works.

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.editable {
+  a {
+    font-weight: bold;
+    color: #00F !important;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  input {
+    display: none;
+    font-size: 1.2em;
+    width: 40px;
+    text-align: center;
+  }
+}
