Added some tests and notes.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,20 @@
 </head>
 <body>
 
+<h3>Notes:</h3>
+<ul>
+  <li>
+    To run tests, use the following commands:
+    <pre>$ rspec spec
+$ rake cucumber</pre>
+  </li>
+  <li>
+    I got as far as story 3. The log specified in story 3 can be seen in the <code>product_quantity_adjustment</code> table.
+  </li>
+</ul>
+
+<hr>
+
 <%= yield %>
 
 </body>
